<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation = "vertical"
    >

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/textViewCityWidget"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textViewMoreWidget"
        android:layout_toStartOf="@+id/textViewMoreWidget"
        android:gravity="right"
        android:text="@string/city"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/textViewTempDayWidget"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textViewLessWidget"
        android:layout_toRightOf="@+id/textViewLessWidget"
        android:text="@string/tempDay"
        android:textColor="@android:color/white"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/textViewTempNightWidget"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/tempNight"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_below="@+id/textViewTempDayWidget"
        android:layout_toRightOf="@+id/textViewLessWidget"
        android:layout_toEndOf="@+id/textViewLessWidget" />

    <TextView
        android:id="@+id/textViewLessWidget"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:text="@string/less"
        android:textSize="42sp"
        android:layout_alignBottom="@+id/textViewTempNightWidget"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/textViewMoreWidget"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="right"
        android:text="@string/more"
        android:textSize="42sp"
        android:layout_alignBottom="@+id/textViewTempNightWidget"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/textViewConditionWidget"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:text="@string/condition"
        android:textSize="16dp"
        android:gravity="right"
        android:textColor="@android:color/white"
        android:layout_below="@+id/textViewCityWidget"
        android:layout_toLeftOf="@+id/textViewMoreWidget"
        android:layout_toStartOf="@+id/textViewMoreWidget" />

    <TextView
        android:id="@+id/textViewDateWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/date"
        android:textSize="22dp"
        android:gravity="right"
        android:layout_below="@+id/textViewMoreWidget"
        android:layout_toLeftOf="@+id/textViewMoreWidget"
        android:layout_toStartOf="@+id/textViewMoreWidget" />

</RelativeLayout>